Refactoring & bug fixes. Made Scale, Interval, Pitch, ScaleType, Tempo immutable.